# Records

./: .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yml  release.yml  test.yml
doc/source/: RecordBase.rst  benchmark.rst  builtin_coercers.rst  builtin_validators.rst  conf.py  extras.rst  field.rst  filler.rst  index.rst  record.rst  records.rst  select.rst  tags.rst
recordclasses.egg-info/: PKG-INFO  SOURCES.txt
records/: __init__.py  extras.py  field.py  record.py  select.py  tags.py
records/fillers/: __init__.py  builtin_validators.py  coercers.py  filler.py  get_filler.py  std_fillers.py  util.py  validator.py  validators.py
records/fillers/builtin_fillers/: __init__.py  recurse.py  repo.py  std_fillers.py  typing_fillers.py
records/utils/: decorators.py  typing_compatible.py
records/validators/: std_validators.py  validator.py
scripts/: lint.sh  unittest.sh
sphinx/source/: index.rst
sphinx/source/reference/: RecordBase.rst
tests/benchmarking/: bench_construction.py  bench_construction_check.py  util.py
tests/examples/: 01_point.py  02_point.py  ex01.py
tests/unittests/: record_test.py  special_type_test.py  test_checking.py  test_checking_strict.py  test_coercers.py  test_export.py  test_inheritance.py  test_order.py  test_parse.py  test_record.py  test_special_type.py  test_validation.py
