[tool.poetry]
name = "records"
version = "0.0.1"
description = "Record Classes"
authors = ["Ben Avrahami"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
isort = "^4.3.21"
black = "^19.10b0"
flake8 = {version = "*", allow-prereleases = true}
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

