[tool.poetry]
name = "recordclasses"
version = "0.0.1"
description = "Record Classes"
authors = ["Ben Avrahami"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bentheiii/Records"
packages = [
    {include='records'}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = { version = "*", allow-prereleases = true }
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

